--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   
     <body>
         <header>
+            <a href="produto.html"> produtos </a>
         </header>
            <main>
+
             <h1><b><i>Barbearia Master</h1></b></i>
         
 
@@ -41,5 +43,3 @@
         </footer>
     </body>
 </html>
-
-    
