--- a/leandro 2/produto.html
+++ b/leandro 2/produto.html
@@ -14,10 +14,9 @@
         <h1>LOGO</h1>
        <nav>
           <ul>
-              <li>home</li>
-              <li>produtos</li>
-              <li>contatos</li>
-        
+              <li><a href="index.html"></a>home</li>
+              <li><a href="produto.html">produtos</a></li>
+              <li><a href="####">contatos</a></li>
           </ul>
        </nav>
     </header>
