--- a/leandro 2/produto.html
+++ b/leandro 2/produto.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+
+
 <head>
 
     <meta charset="UTF-8">
@@ -11,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1>LOGO</h1>
+        <h1></h1>
        <nav>
           <ul>
               <li><a href="index.html"></a>home</li>
@@ -19,6 +21,8 @@
               <li><a href="####">contatos</a></li>
           </ul>
        </nav>
+       <img src="barber.webp" alt="">
     </header>
 </body>
 </html>
+
