--- a/leandro 2/produto.html
+++ b/leandro 2/produto.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+    <div class="caixa">
         <h1></h1>
        <nav>
           <ul>
@@ -21,7 +22,7 @@
               <li><a href="####">contatos</a></li>
           </ul>
        </nav>
-       <img src="barber.webp" alt="">
+       <img src="barber.webp" alt="logo">
     </header>
 </body>
 </html>
