--- a/leandro 2/contato.html
+++ b/leandro 2/contato.html
@@ -31,4 +31,49 @@
         <input type="telefone" id="mensagens" class="input-padrao">
 
         <label for="mensagem"> mensagem</label>
+
+        <div>
+
+            <p> Como Prefere o Nosso contato?</p>
+
+            <label for="radio-email">
+                <input type="radio" name="contato" value="email"i id=" radio-email">
+                Email
+            </label>
+
+            <label for="radio-telefone">
+                    <input type="radio" name="contato" value="Telefone"i id="radio-Telefone">
+                    Telefone
+            </label>
+
+            <Label for="radio-Whatsapp">
+                <input type="radio" name="contato" value="radio-Whatsapp" checked>
+                Whatsapp
+            </Label>
+
+        </div>
+
     </form>
+
+    <div>
+
+        <p>Qual Horario Prefere ser Atendido</p>
+        <select>
+
+        <option>Manhã</option>
+        <option>Tarde</option>
+        <Option>Noite</Option>
+        </select>
+
+    
+
+
+    <Label class="checbox">
+        <input type="checkbox" checked>
+        Gostaria de Receber Nossas Novidades por Email?
+    </Label>
+
+    <input type="submit" value="Enviar formulario" class="enviar">
+
+</div>
+</form>
